src/core-crm/objects/hed__Facility__c/fields/hed__Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Facility_Type__c</fullName>
    <description>Select the type of Facility this is, for example, a computer lab, health center, lecture hall, etc.</description>
    <inlineHelpText>Select the type of Facility this is, for example, a computer lab, health center, lecture hall, etc.</inlineHelpText>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cafeteria/Food Hall</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Computer Lab</fullName>
            </value>
            <value>
                <fullName>Gymnasium</fullName>
            </value>
            <value>
                <fullName>Health Center</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Lecture Hall</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Customer Premise</fullName>
            </value>
            <value>
                <fullName>Campus</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
                <isActive>false</isActive>
                <label>Building</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>